[package]
name = "chell"
version = "6.4.0"
edition = "2024"

[features]
ground = ["dep:erased-serde", "dep:serde", "macros/ground"]

[dependencies]
macros = { package = "chell-macros", path = "./macros/" }
#heapless = { version = "0.9", default-features = false }

# ground serialization via serde
erased-serde = { version = "0.4.10", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_cbor = "0.11.2"
