[lib]
proc-macro = true

[package]
name = "chell-macros"
version = "6.0.2"
edition = "2024"

[features]
ground = []

[dependencies]
heck = "0.5.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
